# rpi-matrix

./: .gitignore  BEHAVIOR.md  CMakeLists.txt  OPTIMIZATIONS.md  QUICKSTART.md  README.md  TEST_STATUS.md  VARIATIONS.md  build.sh
benchmarks/: AI_INSTRUCTIONS.md  baseline.json  benchmark.sh  results.json
include/app/: app_core.h
include/components/: camera_capture.h  debug_data_collector.h  debug_overlay.h  matrix_display.h  software_matrix_display.h
include/effects/ambient/: mandelbrot_root_veins.h  oval_chain.h  procedural_shapes.h  wave_patterns.h
src/: camera_to_matrix.cpp  desktop_to_matrix.cpp  rpicam_to_matrix.cpp
src/app/: app_core.cpp
src/components/: camera_capture.cpp  debug_data_collector.cpp  debug_overlay.cpp  matrix_display.cpp  software_matrix_display.cpp
src/effects/ambient/: mandelbrot_root_veins.cpp  oval_chain.cpp  procedural_shapes.cpp  wave_patterns.cpp
